--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ description = "Vuetify components for Yew Framework"
 [dependencies]
 mixin = "0.2.0"
 strum = { version = "0.18.0", features = ["derive"] }
-yew = { git = "ssh://git@github.com/yewstack/yew" }
+yew = "0.17"
 [build-dependencies]
 anyhow = "1.0.28"
 sass-rs = { git = "ssh://git@github.com/compass-rs/sass-rs" }
